# ActTools

./: .gitignore  README.md  pyproject.toml
src/actuarial_lib/core/: __init__.py  math.py
src/actuarial_lib/ifrs17/: __init__.py  risk_adjustment.py
tests/: test_logic.py
